--- a/weatherstyles.css
+++ b/weatherstyles.css
@@ -3,26 +3,31 @@ body {
   color: #fff;
   background-color: #000;
   font-size: 3em;
+  margin: 5%
+}
+.jumbotron{
+  background-color: #000;
+  margin: -1%;
+}
+h1 {
+  font-family: serif;
+}
+img {
+  margin: auto;
+  display: block;
+}
+#skies:first-letter{
+  text-transform: capitalize;
+}
+#tempCelsius {
+  display: none;
+}
+button {
+  color: #000;
+  border-radius: 10px;
+  margin: 2%;
+}
+footer {
+  margin: 2%;
 }
 /*use skycons to add flair somewhere*/
-.sunny {
-  background-image: url(sunny sky);
-}
-.partly-cloudy {
-  background-image: url(sunny sky with clouds);
-  color: grey;
-}
-.cloudy {
-  background-image: url(cloudy sky);
-  color: #000;
-}
-.rain {
-  background-image: url(rain);
-}
-.storm {
-  background-image: url(storm);
-}
-.snow {
-  background-image: url(snow);
-  color: #000;
-}
